--- a/First Web/Index.html
+++ b/First Web/Index.html
@@ -8,9 +8,82 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <div class="foto">
-      <img src="./imgs/foto.png" alt="dsadas" />
-    </div>
+    <h1>Gorka Etxebarria</h1>
+    <nav>
+      <a href="file2.html">internal link</a>
+      <a href="https://mondagon.edu" title="external link"> externa link</a>
+      <a href="" title="external link new tab">external link new tab</a>
+      <a href="" title="go to an id">go to an idS</a>
+    </nav>
+    <hr />
+    <section>
+      <h2>Favorite food</h2>
+      <ul>
+        <li>Steak</li>
+        <li>Pizza</li>
+        <li>Pottatoe Omelette</li>
+        <li>Basque cake</li>
+      </ul>
+    </section>
+    <h2>Achievements</h2>
+    <p>
+      Progress in this primary school(100%)
+      <progress value="100" max="100">100%</progress>
+    </p>
+    <p>
+      Progress in collegue(99%) <progress value="99" max="100">100%</progress>
+    </p>
+    <p>
+      Progress in life goals(70%) <progress value="70" max="100">100%</progress>
+    </p>
+    <h2>More About me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, dolor?</p>
+    <h2>table section</h2>
+    <table>
+      <tr>
+        <th>colum1</th>
+        <th>colum2</th>
+        <th>colum3</th>
+      </tr>
+      <tr>
+        <td>cel1-1</td>
+        <td>cel1-2</td>
+        <td>cel1-3</td>
+      </tr>
+      <tr>
+        <td>cel2-1</td>
+        <td>cel2-2</td>
+        <td>cel2-3</td>
+      </tr>
+      <tr>
+        <td>cel3-1</td>
+        <td>cel3-2</td>
+        <td>cel3-3</td>
+      </tr>
+    </table>
+    <h2>Contact me</h2>
+    <label for="Subject">Subject:</label><br />
+    <input
+      type="text"
+      name="Subject"
+      placeholder="set the subject of the message"
+    />
+    <br />
+    <label for="message">message:</label><br />
+    <textarea name="w3review" rows="4" cols="50">
+set de subject of the message</textarea
+    >
+    <br />
+    <input type="submit" value="Send Message" />
+    <hr />
+    <footer>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
+        necessitatibus laboriosam doloribus. At saepe cum molestiae ipsum
+        doloribus, placeat vel.
+      </p>
+      <img src="https://picsum.photos/200/200" alt="foto" />
+    </footer>
+    <hr />
   </body>
 </html>
