--- a/First Web/Index.html
+++ b/First Web/Index.html
@@ -12,8 +12,13 @@
     <nav>
       <a href="file2.html">internal link</a>
       <a href="https://mondragon.edu" title="external link"> externa link</a>
-      <a href="https://mondragon.edu" title="external link new tab" target="_blank">external link new tab</a>
-      <a href="#foto" title="go to an id" >go to an id</a>
+      <a
+        href="https://mondragon.edu"
+        title="external link new tab"
+        target="_blank"
+        >external link new tab</a
+      >
+      <a href="#foto" title="go to an id">go to an id</a>
     </nav>
     <hr />
     <section>
@@ -68,23 +73,23 @@
       </table>
     </section>
     <section>
-      <form action="file2.html" >
-      <h2>Contact me</h2>
-      <label for="Subjects">Subject</label><br />
-      <input
-        type="text"
-        name="Subject"
-        placeholder="set the subject of the message"
-        required="required"
-      />
-      <br />
-      <label for="messages">message</label><br />
-      <textarea name="w3review" rows="4" cols="50" required="required">
+      <form action="file2.html">
+        <h2>Contact me</h2>
+        <label for="Subjects">Subject</label><br />
+        <input
+          type="text"
+          name="Subject"
+          placeholder="set the subject of the message"
+          required="required"
+        />
+        <br />
+        <label for="messages">message</label><br />
+        <textarea name="w3review" rows="4" cols="50" required="required">
         set de subject of the message
       </textarea
-      >
-      <br />
-      <input type="submit" value="Send Message" />
+        >
+        <br />
+        <input type="submit" value="Send Message" />
       </form>
     </section>
     <hr />
@@ -95,7 +100,7 @@
           necessitatibus laboriosam doloribus. At saepe cum molestiae ipsum
           doloribus, placeat vel.
         </h4>
-        <img src="https://picsum.photos/512/256" alt="foto"id="foto"/>
+        <img src="https://picsum.photos/512/256" alt="foto" id="foto" />
       </footer>
     </section>
     <hr />
