--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -12,7 +12,7 @@
     <div id="overall">
         <div class="navegation">
             <nav>
-                <a href="index.html" class="nav">Index</a> |
+                <a href="index.html" class="nav" id="current">Index</a> |
                 <a href="file2.html" class="nav">Second</a>
             </nav>
         </div>
