--- a/Exercise 2/file2.html
+++ b/Exercise 2/file2.html
@@ -13,7 +13,7 @@
         <div class="navegation">
             <nav>
                 <a href="index.html" class="nav">Index</a>
-                <a href="file2.html" class="nav">Second</a>
+                <a href="file2.html" class="nav" id="current">Second</a>
             </nav>
         </div>
         <div>
