--- a/units and basics/units and basic properties/index.html
+++ b/units and basics/units and basic properties/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <h1>Books</h1>
+      <nav>
+        <a href="#book1">book1</a>
+        <a href="#book2">book2</a>
+        <a href="#book3">books3</a>
+      </nav>
+    </header>
+    <main>
+        <div class="card" id="book1">
+            <header class="card_header">
+                <h2>The wise man´s fear</h2>
+            </header>
+            <div class="card_content">
+                <ul class="card_data">
+                    <li><b>Series:</b> The kingskiller Chronicle</li>
+                    <li><b>Book:</b> 2/3</li>
+                    <li><b>Year:</b> 2011</li>
+                </ul>
+                <div class="card_sinopsis">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod doloribus doloremque mollitia.</p>
+                </div>
+            </div>
+            <div>
+                <footer class="card_footer">
+                    Autor:Patric Rothfus
+                </footer>
+            </div>
+        </div>
+        <div class="card" id="book2">
+            <header class="card_header">
+                <h2>Mistborn: The Final Empiere</h2>
+            </header>
+            <div class="card_content">
+                <ul class="card_data">
+                <li><b>Series:</b> Mistborn era One</li>
+                <li><b>Book:</b> 1/3</li>
+                <li><b>Year:</b> 2006</li>
+                </ul>
+                <dir class="card_sinopsis">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dicta inventore maxime!</p>
+
+                </dir>
+                <div class="card_footer">
+                    <footer>
+                        Author: Brandom Sanderson
+                    </footer>
+                </div>
+            </div>
+        </div>
+        <div class="card" id="book3">
+            <Header class="card_header">
+                <h2>Norse: mitology</h2>
+            </Header>
+            <div class="card_content">
+                <ul class="card_data">
+                    <li><b>Year:</b> 2017</li>
+                </ul>
+                <dir class="card_sinopsis">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus doloremque labore aperiam.</p>
+                </dir>
+            </div>
+            <div class="card_footer">
+                Author: Nell Gaiman
+            </div>
+
+        </div>
+    </main>
+  </body>
 </html>
