--- a/units and basics/units and basic properties/index.html
+++ b/units and basics/units and basic properties/index.html
@@ -28,7 +28,7 @@
                     <li><b>Year:</b> 2011</li>
                 </ul>
                 <div class="card_sinopsis">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod doloribus doloremque mollitia.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum qui maxime ad provident unde doloremque explicabo pariatur. Laborum est magni vero quam culpa et id aut harum cumque. Aut, recusandae?</p>
                 </div>
             </div>
             <div>
@@ -48,7 +48,7 @@
                 <li><b>Year:</b> 2006</li>
                 </ul>
                 <dir class="card_sinopsis">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dicta inventore maxime!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium quas alias hic eligendi modi ipsam ea dolorum, nemo sapiente blanditiis earum aliquid quos delectus provident dolor, vitae rerum ab repellendus?</p>
 
                 </dir>
                 <div class="card_footer">
@@ -67,13 +67,14 @@
                     <li><b>Year:</b> 2017</li>
                 </ul>
                 <dir class="card_sinopsis">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellendus doloremque labore aperiam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam cupiditate iusto fugit quibusdam aspernatur ratione amet minus aut architecto magni delectus, sequi illum placeat officia accusantium aliquid dolores quas natus.</p>
                 </dir>
             </div>
             <div class="card_footer">
+                <footer>
                 Author: Nell Gaiman
+            </footer>
             </div>
-
         </div>
     </main>
   </body>
