--- a/Js course/Events Exercise/hmtl.html
+++ b/Js course/Events Exercise/hmtl.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Events Exercise</title>
   <script>
-    function writeText(str) {
-      var text= document.getElementById("myTextInput");
-      console.log("Event: " + text  );
-      
-      document.getElementById('myClickBtn').innerHTML = "Event: " + str;
+    writeText=(str) =>{
+      console.log("Event: " + str  );
+      document.getElementById('writeMe').innerHTML = str;
     }
-    console.log("event: "+ str)
+    rightClick=()=>{
+      document.g
+    }
   </script>
 </head>
 
@@ -26,32 +26,32 @@ and another event when the window of the browser is resiced-->
   <form>
     <!-- An event should be executed when the input gets the focus (with tabulator or mouse click for example),
 another event should be executed when the focus is lost -->
-    <input type='text' id="myTextInput" placeholder="When focused/unfocused on me" /><br /><br />
+    <input type='text' id="myTextInput" placeholder="When focused/unfocused on me" onfocus="writeText('onFocus')" /><br /><br />
 
     <!-- An event should be executed when the input content is changed (the focus must be lost to see the result) -->
-    <input type='text' id="myTextInput" placeholder="When the text here is changed" /><br /><br />
+    <input type='text' id="myTextInput" placeholder="When the text here is changed" onchange="writeText('onChange')"/><br /><br />
 
     <!-- onclick: This is the example one, use it for testing the function -->
     <button type='button' id="myClickBtn" onclick="writeText('onclick')">When clicked</button><br /><br />
 
     <!-- An event should be executed when the mouse is being clicked,
 another event should be executed when the mouse is released -->
-    <button type='button'>Similar but when I am pressed or released</button><br /><br />
+    <button type='button' onmousedown="writeText('onmousedown')" onmouseup="writeText('onmouseup')">Similar but when I am pressed or released</button><br /><br />
 
     <!-- An event should be executed when the mouse is being clicked with the right button -->
-    <button type='button'>When right-clicked on me</button><br /><br />
+    <button type='button' oncontextmenu="writeText('oncontextmenu')" >When right-clicked on me</button><br /><br />
 
     <!-- An event should be executed when the mouse is being double clicked -->
-    <button type='button'">When double clicked on me</button><br/><br/>
+    <button type='button' ondblclick="writeText('ondblclick')">When double clicked on me</button><br/><br/>
 
     <br/><br/><br/>
 
     <!-- An event should be executed when the mouse passes over the button,
     another event should be executed when the mouse is not over the button anymore -->
-    <button type='button'>When the mouse is over me and when it is out of me</button><br/>
+    <button type='button' onmouseenter="writeText('onmouseenter')" onmouseleave="writeText('onmouseleave')">When the mouse is over me and when it is out of me</button><br/>
   </form>
   <hr/>
-  <p id=" writeMe">Nothing done yet</p>
+  <p id="writeMe">Nothing done yet</p>
   <hr />
   <p>More info at <a href="https://developer.mozilla.org/en-US/docs/Web/Events">MDN - Event reference</a> or at <a
     href="http://www.w3schools.com/jsref/dom_obj_event.asp">w3schools.com - HTML DOM Events</a>.</p>
