--- a/Js course/MultiplyDivide/index.html
+++ b/Js course/MultiplyDivide/index.html
@@ -12,8 +12,8 @@ body {margin: 30px;}
 <form>
 1st Number : <input type="text" id="firstNumber" /><br>
 2nd Number: <input type="text" id="secondNumber" /><br>
-<input type="button" onClick="multiplyBy()" Value="Multiply" />
-<input type="button" onClick="divideBy()" Value="Divide" />
+<input type="button" class="multiply"  Value="Multiply" />
+<input type="button" class= "divide"   Value="Divide" />
 </form>
 <p>The Result is : <br>
 <span id = "result"></span>
