--- a/2022-2023_front-end_exam_resources/src/index.html
+++ b/2022-2023_front-end_exam_resources/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
     <div class="header">
@@ -42,7 +43,6 @@
                     <li><I>TYPE</I>: core</li>
                 </ul>
             </div>
-            
         </article>
         <article id="pm">
             <img src="images/mu-vertical.png" alt="logo mondragon" id="logo">
